# cvl

./: .travis.sh  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: functions.cmake  macros.cmake  uninstall.cmake.in
cmake/modules/: FindEigen3.cmake  FindTinyXML2.cmake  Findnanoflann.cmake
common/: CMakeLists.txt
common/include/cvl/common/: algorithm.h  camera.h  common.h  eigen.h  function.h  geometry.h  mesh.h
common/include/cvl/common/impl/: geometry.hpp
common/src/: function.cpp  geometry.cpp  mesh.cpp
doc/: Doxyfile.in
examples/: CMakeLists.txt
examples/mat_file_io/: CMakeLists.txt  mat_file_io.cpp
examples/nanoflann/: CMakeLists.txt  nanoflann.cpp
examples/test/: CMakeLists.txt  compilation_test.cpp
examples/vgm_grabber/: CMakeLists.txt  vgm_grabber.cpp
examples/vgm_model/: CMakeLists.txt  vgm_model.cpp
filter/: CMakeLists.txt
filter/include/cvl/filter/: duplicate.h  filter.h
filter/include/cvl/filter/impl/: duplicate.hpp
filter/src/: duplicate.cpp
io/: CMakeLists.txt
io/include/cvl/io/: grabber.h  io.h  mat_io.h  utils.h  vgm_grabber.h  vgm_model_reader.h
io/include/cvl/io/impl/: grabber.hpp
io/src/: grabber.cpp  mat_io.cpp  utils.cpp  vgm_grabber.cpp  vgm_model_reader.cpp
search/: CMakeLists.txt
search/include/cvl/search/: kdtree.h  search.h
search/include/cvl/search/impl/: kdtree.hpp
search/src/: kdtree.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  function.cpp
tests/io/: CMakeLists.txt  grabber.cpp
visualization/: CMakeLists.txt
visualization/include/cvl/visualization/: opencv.h  visualization.h
visualization/src/: opencv.cpp
